--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
-PORT=3000
 MONGO_URI=mongodb+srv://gokulg12th2004:Hn20QGGUVEjj6GO8@cluster0.jmftl0o.mongodb.net/TaskManagerPro?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=YOUR_ACTUAL_GENERATED_STRONG_AND_UNIQUE_SECRET_STRING_HERE
+JWT_SECRET=your_secure_jwt_secret_here
+PORT=5000
+NODE_ENV=development
+FRONTEND_URL=http://localhost:3001 # or your frontend domain
